<resources>
    <string name="app_name">NewsApp Test</string>

    <string name="api_key">9446542463ad4226b117af0a3cc035ce</string>
    <string name="api_url">https://newsapi.org/v2/</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="apply">Apply</string>
</resources>