<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.ewind.newsapptest.view.main.favorite.FavoriteFragment"
        android:label="@string/title_favorite" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.ewind.newsapptest.view.main.news.NewsFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ewind.newsapptest.view.main.profile.ProfileFragment"
        android:label="@string/title_profile" />
</navigation>